# bank-statement-parser

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
adding-a-parser/: index.html
adding-an-exporter/: index.html
architecture/: index.html
changelog/: index.html
contributing/: index.html
docs/: adding-a-parser.md  adding-an-exporter.md  architecture.md  changelog.md  contributing.md  index.md  usage.md
docs/plans/: 2026-03-01-critical-patch-design.md  2026-03-01-fake-pdf-fixtures-design.md
plans/2026-03-01-fake-pdf-fixtures-design/: index.html
search/: search_index.json
src/bankparser/: __init__.py  categorizer.py  cli.py  database.py  interactive.py  models.py
src/bankparser/exporters/: __init__.py  base.py  generic.py  monarch.py  sure.py
src/bankparser/parsers/: __init__.py  amex.py  base.py  bbva.py  hsbc.py
tests/: conftest.py  test_categorizer.py  test_cli.py  test_interactive.py  test_models.py
tests/fixtures/generators/: __init__.py  _shared.py  generate_amex.py  generate_bbva.py  generate_hsbc.py
tests/test_exporters/: test_exporters.py
tests/test_parsers/: test_amex.py  test_amex_inline.py  test_amex_pdf.py  test_base.py  test_bbva.py  test_bbva_pdf.py  test_hsbc.py  test_hsbc_pdf.py  test_registry.py
usage/: index.html
