[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bankparser"
version = "0.1.0"
description = "Parse Mexican bank statement PDFs (Amex, BBVA, HSBC) into CSV for personal finance apps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pedro Perafan"},
]
keywords = ["bank", "statement", "parser", "pdf", "csv", "mexico", "amex", "bbva", "hsbc", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "click>=8.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "mkdocs-material>=9.0",
]

[project.scripts]
bankparse = "bankparser.cli:main"

[project.urls]
Homepage = "https://github.com/Perafan18/bank-statement-parser"
Repository = "https://github.com/Perafan18/bank-statement-parser"
Issues = "https://github.com/Perafan18/bank-statement-parser/issues"
Documentation = "https://Perafan18.github.io/bank-statement-parser/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "pytesseract.*", "pdf2image.*", "reportlab.*"]
ignore_missing_imports = true
